[gd_scene load_steps=2 format=3 uid="uid://318rhkwqaunw"]

[ext_resource type="Script" path="res://Scripts/UI/ui.gd" id="1_l6swn"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_l6swn")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_right = 30.0
offset_bottom = 77.0
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="WeaponRow" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="WeaponLabel" type="Label" parent="PanelContainer/VBoxContainer/WeaponRow"]
layout_mode = 2
text = "null"

[node name="AbilityRow" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="AbilityLabel" type="Label" parent="PanelContainer/VBoxContainer/AbilityRow"]
layout_mode = 2
text = "null"

[node name="GadgetRow" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="GadgetLabel" type="Label" parent="PanelContainer/VBoxContainer/GadgetRow"]
layout_mode = 2
text = "null"
